# vidvault

./: Cargo.toml  LICENSE  README.md
.github/workflows/: action.yml
src/: args.rs  ethcer.rs  main.rs  settings.rs  source.rs  tasks.rs  timer.rs  ui.rs
src/tasks/: dislodge.rs  download.rs  embed.rs
