[package]
name = "vidvault"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.6", features = ["derive"] }
inquire = "0.5.3"
opencv = "0.93.4"
tokio = { version = "1.24.2", features = ["full"] }
youtube_dl = { version = "0.8.0", features = ["downloader"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "z"
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = "symbols"
